--- a/package.json
+++ b/package.json
@@ -1,50 +1,101 @@
 {
   "name": "web-bluetooth-scanner",
-  "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
+  "version": "1.0.0-beta.1",
   "private": true,
+  "description": "Quickstart App with @covalent packages",
+  "keywords": [
+    "angular",
+    "components",
+    "reusable"
+  ],
+  "scripts": {
+    "e2e": "protractor",
+    "e2e-test": "protractor ./protractor.conf.js",
+    "lint": "tslint -c ./tslint.json \"./src/**/*.ts\" -e \"./src/**/typings.d.ts\" -e \"./src/environments/**\"",
+    "reinstall": "rm -rf node_modules tmp deploy dist && npm i",
+    "postinstall": "webdriver-manager update",
+    "start-api": "cd mock-api && covalent-data &",
+    "stop-api": "pkill covalent-data",
+    "webdriver-update": "bash ./node_modules/.bin/webdriver-manager update",
+    "test": "ng test --code-coverage --single-run",
+    "ghpages-deploy": "ng build --base-href /covalent-quickstart/ --aot -prod && bash scripts/ghpages-deploy"
+  },
+  "engines": {
+    "node": ">4.4 < 7",
+    "npm": ">3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/teradata/covalent-quickstart.git"
+  },
+  "license": "MIT",
+  "author": "Teradata UX",
+  "contributors": [
+    "Kyle Ledbetter <kyle.ledbetter@teradata.com>",
+    "Richa Vyas <richa.vyas@teradata.com>",
+    "Ed Morales <eduardo.morales@teradata.com>",
+    "Jason Weaver <jason.weaver@teradata.com>",
+    "Jeremy Smartt <jeremy.smartt@teradata.com>",
+    "Ilsun Park <ilsun.park@teradata.com>"
+  ],
   "dependencies": {
     "@angular/common": "^2.4.0",
     "@angular/compiler": "^2.4.0",
     "@angular/core": "^2.4.0",
     "@angular/forms": "^2.4.0",
     "@angular/http": "^2.4.0",
-    "@angular/material": "^2.0.0-beta.1",
+    "@angular/material": "2.0.0-beta.1",
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/platform-server": "2.4.5",
+    "@angular/router": "3.4.5",
+    "@covalent/core": "1.0.0-beta.1",
+    "@covalent/charts": "1.0.0-beta.1",
+    "@covalent/dynamic-forms": "1.0.0-beta.1",
+    "@covalent/highlight": "1.0.0-beta.1",
+    "@covalent/http": "1.0.0-beta.1",
+    "@covalent/markdown": "1.0.0-beta.1",
+    "@swimlane/ngx-charts": "^3.1.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "highlight.js": "9.9.0",
     "rxjs": "^5.0.1",
+    "showdown": "1.6.0",
     "text-encoding": "^0.6.4",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "moment": "^2.17.1",
+    "d3": "^4.4.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-beta.31",
     "@angular/compiler-cli": "^2.4.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
+    "@types/hammerjs": "2.0.30",
+    "@types/jasmine": "2.2.31",
+    "@types/node": "6.0.34",
+    "@types/selenium-webdriver": "2.53.36",
     "@types/text-encoding": "0.0.30",
     "@types/web-bluetooth": "0.0.1",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
+    "angular-cli": "1.0.0-beta.26",
+    "codelyzer": "2.0.0-beta.4",
+    "ember-cli-inject-live-reload": "1.4.0",
+    "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "protractor": "~5.1.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-jasmine": "1.0.2",
+    "karma-remap-istanbul": "0.2.1",
+    "karma-firefox-launcher": "1.0.0",
+    "karma-phantomjs-launcher": "1.0.1",
+    "node-sass": "3.8.0",
+    "phantomjs-prebuilt": "2.1.7",
+    "protractor": "4.0.5",
+    "sass-loader": "^4.0.2",
     "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.0"
+    "tslint": "^4.3.1",
+    "typescript": "2.1.5"
+  },
+  "optionalDependencies": {
+    "@covalent/data": "0.4.0"
   }
 }
