--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "web-bluetooth-scanner",
   "version": "1.0.0-beta.1",
   "private": true,
-  "description": "Quickstart App with @covalent packages",
+  "description": "A web-bluetooth scanner",
   "keywords": [
     "angular",
     "components",
-    "reusable"
+    "web-bluetooth"
   ],
   "scripts": {
     "e2e": "protractor",
@@ -26,17 +26,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/teradata/covalent-quickstart.git"
+    "url": "https://github.com/mpicciolli/web-bluetooth-scanner.git"
   },
   "license": "MIT",
-  "author": "Teradata UX",
+  "author": "mpicciolli",
   "contributors": [
-    "Kyle Ledbetter <kyle.ledbetter@teradata.com>",
-    "Richa Vyas <richa.vyas@teradata.com>",
-    "Ed Morales <eduardo.morales@teradata.com>",
-    "Jason Weaver <jason.weaver@teradata.com>",
-    "Jeremy Smartt <jeremy.smartt@teradata.com>",
-    "Ilsun Park <ilsun.park@teradata.com>"
   ],
   "dependencies": {
     "@angular/common": "^2.4.0",
