--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": ["es6", "dom"],
+    "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
     "outDir": "../dist/out-tsc",
@@ -12,16 +12,6 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
-    ],
-    "types": [
-      "jasmine", "hammerjs"
-    ],
-    "noUnusedParameters": false,
-    "noUnusedLocals": false,
-    "allowUnreachableCode": false,
-    "pretty": true
-  },
-  "exclude": [
-    "**/*.spec.*"
-  ]
+    ]
+  }
 }
