--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   },
   "license": "MIT",
   "author": "mpicciolli",
-  "contributors": [
-  ],
+  "contributors": [],
   "dependencies": {
     "@angular/common": "^2.4.0",
     "@angular/compiler": "^2.4.0",
@@ -43,22 +42,23 @@
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/platform-server": "2.4.5",
     "@angular/router": "3.4.5",
-    "@covalent/core": "1.0.0-beta.1",
     "@covalent/charts": "1.0.0-beta.1",
+    "@covalent/core": "1.0.0-beta.1",
     "@covalent/dynamic-forms": "1.0.0-beta.1",
     "@covalent/highlight": "1.0.0-beta.1",
     "@covalent/http": "1.0.0-beta.1",
     "@covalent/markdown": "1.0.0-beta.1",
     "@swimlane/ngx-charts": "^3.1.2",
     "core-js": "^2.4.1",
+    "d3": "^4.4.0",
     "hammerjs": "^2.0.8",
     "highlight.js": "9.9.0",
+    "moment": "^2.17.1",
+    "rx": "^4.1.0",
     "rxjs": "^5.0.1",
     "showdown": "1.6.0",
     "text-encoding": "^0.6.4",
-    "zone.js": "^0.7.2",
-    "moment": "^2.17.1",
-    "d3": "^4.4.0"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-beta.31",
