--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-bluetooth-scanner",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "private": true,
   "description": "A web-bluetooth scanner",
   "keywords": [
@@ -9,16 +9,12 @@
     "web-bluetooth"
   ],
   "scripts": {
-    "e2e": "protractor",
-    "e2e-test": "protractor ./protractor.conf.js",
-    "lint": "tslint -c ./tslint.json \"./src/**/*.ts\" -e \"./src/**/typings.d.ts\" -e \"./src/environments/**\"",
+    "e2e": "ng e2e",
+    "lint": "ng lint",
     "reinstall": "rm -rf node_modules tmp deploy dist && npm i",
-    "postinstall": "webdriver-manager update",
-    "start-api": "cd mock-api && covalent-data &",
-    "stop-api": "pkill covalent-data",
+    "postinstall": "webdriver-manager update && ./scripts/protractor.sh",
     "webdriver-update": "bash ./node_modules/.bin/webdriver-manager update",
-    "test": "ng test --code-coverage --single-run",
-    "ghpages-deploy": "ng build --base-href /covalent-quickstart/ --aot -prod && bash scripts/ghpages-deploy"
+    "test": "ng test --code-coverage --single-run"
   },
   "engines": {
     "node": ">4.4 < 7",
@@ -30,63 +26,69 @@
   },
   "license": "MIT",
   "author": "mpicciolli",
-  "contributors": [],
+  "contributors": [
+  ],
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/material": "2.0.0-beta.1",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/platform-server": "2.4.5",
-    "@angular/router": "3.4.5",
-    "@covalent/charts": "1.0.0-beta.1",
-    "@covalent/core": "1.0.0-beta.1",
-    "@covalent/dynamic-forms": "1.0.0-beta.1",
-    "@covalent/highlight": "1.0.0-beta.1",
-    "@covalent/http": "1.0.0-beta.1",
-    "@covalent/markdown": "1.0.0-beta.1",
-    "@swimlane/ngx-charts": "^3.1.2",
+    "@angular/animations": "^4.0.2",
+    "@angular/common": "^4.0.2",
+    "@angular/compiler": "^4.0.2",
+    "@angular/compiler-cli": "^4.0.2",
+    "@angular/core": "^4.0.2",
+    "@angular/flex-layout": "^2.0.0-beta.7",
+    "@angular/forms": "^4.0.2",
+    "@angular/http": "^4.0.2",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "^4.0.2",
+    "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/platform-server": "^4.0.2",
+    "@angular/router": "^4.0.2",
+    "@covalent/core": "^1.0.0-beta.3",
+    "@covalent/dynamic-forms": "^1.0.0-beta.3",
+    "@covalent/highlight": "^1.0.0-beta.3",
+    "@covalent/http": "^1.0.0-beta.3",
+    "@covalent/markdown": "^1.0.0-beta.3",
+    "@swimlane/ngx-charts": "^5.0.0",
+    "@types/hammerjs": "^2.0.34",
+    "@types/jasmine": "^2.5.47",
+    "@types/selenium-webdriver": "^2.53.42",
+    "codelyzer": "^2.1.1",
     "core-js": "^2.4.1",
-    "d3": "^4.4.0",
+    "d3": "^4.7.4",
     "hammerjs": "^2.0.8",
-    "highlight.js": "9.9.0",
-    "moment": "^2.17.1",
-    "rx": "^4.1.0",
-    "rxjs": "^5.0.1",
-    "showdown": "1.6.0",
+    "highlight.js": "^9.10.0",
+    "karma": "^1.6.0",
+    "karma-firefox-launcher": "^1.0.1",
+    "phantomjs-prebuilt": "^2.1.14",
+    "rxjs": "^5.3.0",
+    "showdown": "^1.6.4",
     "text-encoding": "^0.6.4",
-    "zone.js": "^0.7.2"
+    "typescript": "^2.3.0",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-beta.31",
-    "@angular/compiler-cli": "^2.4.0",
-    "@types/hammerjs": "2.0.30",
-    "@types/jasmine": "2.2.31",
-    "@types/node": "6.0.34",
-    "@types/selenium-webdriver": "2.53.36",
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/hammerjs": "^2.0.30",
+    "@types/jasmine": "^2.5.38",
+    "@types/node": "^6.0.68",
+    "@types/selenium-webdriver": "^2.53.36",
     "@types/text-encoding": "0.0.30",
     "@types/web-bluetooth": "0.0.1",
-    "codelyzer": "2.0.0-beta.4",
-    "ember-cli-inject-live-reload": "1.4.0",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-cli": "1.0.1",
-    "karma-jasmine": "1.0.2",
-    "karma-remap-istanbul": "0.2.1",
-    "karma-firefox-launcher": "1.0.0",
-    "karma-phantomjs-launcher": "1.0.1",
-    "node-sass": "3.8.0",
-    "phantomjs-prebuilt": "2.1.7",
-    "protractor": "4.0.5",
-    "sass-loader": "^4.0.2",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.1",
-    "typescript": "2.1.5"
+    "codelyzer": "^2.0.1",
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.4.1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.3",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "^5.1.1",
+    "ts-node": "^2.1.2",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.2"
   },
   "optionalDependencies": {
     "@covalent/data": "0.4.0"
